fix: fix overlapping layout sections when using id or class tunes

--- a/automad/src/client/admin/styles/components/editor/block.less
+++ b/automad/src/client/admin/styles/components/editor/block.less
@@ -98,7 +98,7 @@
 
 	& .am-e-badge {
 		gap: 0;
-		margin: 0 0.4rem 0.4rem 0;
+		margin: 0 0.125rem 0.4rem 0;
 		pointer-events: none;
 	}
 }
